--- a/FCGagarin.WebUI/Views/Home/Index.cshtml
+++ b/FCGagarin.WebUI/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="col-md-4">
         <h2>Новость</h2>
         <p>
-            Просто чтобы было)
+            Просто чтобы было)test git
         </p>
     </div>
 </div>
