--- a/FCGagarin.WebUI/Views/Home/Index.cshtml
+++ b/FCGagarin.WebUI/Views/Home/Index.cshtml
@@ -1,14 +1,16 @@
 ﻿@{
     ViewBag.Title = "Главная";
 }
-<div>
-    <ul class="top-menu sub-menu"> @* TODO:Landead придумать, как сделать по другому стили *@
-        <li>@Html.ActionLink("Новости", "Index", "Home")</li>
-        <li>@Html.ActionLink("Анонсы", "Index", "Training")</li>
-    </ul>
+<div class="col-lg-12">
+    <div class="navbar navbar-default">
+        <ul class="nav navbar-nav">
+            <li>@Html.ActionLink("Новости", "Index", "Home")</li>
+            <li>@Html.ActionLink("Анонсы", "Index", "Training")</li>
+        </ul>
+    </div>
 </div>
-<div class="row">
-    <div class="col-md-4">
+<div>
+    <div>
         <h2>Новость</h2>
         <p>
             Просто чтобы было)test git
