--- a/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
+++ b/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-default">
             <ul class="nav navbar-nav menu">
                 <li>@Html.ActionLink("Главная", "Index", "Home")</li>
-                <li>@Html.ActionLink("Тренеровки", "Index", "Training")</li>
+                <li>@Html.ActionLink("Тренировки", "Index", "Training")</li>
                 <li>@Html.ActionLink("Информация", "Index", "Info")</li>
                 <li>@Html.ActionLink("Галерея", "Index", "Gallery")</li>
             </ul>
