--- a/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
+++ b/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
@@ -2,45 +2,38 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-    <div class="wrapper container">
-        <header>
-            @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", new { @class = "logo" })
-            <div id="registerArea">
-                @Html.Partial("_LoginPartial")
+    <header>
+        <div class="row">
+            <div  class="col-md-8">
+                @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", new { @class = "logo" })
             </div>
-        </header>
-        <div>
-            <table class="navbar navbar-default menu">
-                <tr class="nav navbar-nav">
-                    <td>@Html.ActionLink("Главная", "Index", "Home")</td>
-                    <td>@Html.ActionLink("Тренеровки", "Index", "Training")</td>
-                    <td>@Html.ActionLink("Информация", "Index", "Info")</td>
-                    <td>@Html.ActionLink("Галерея", "Index", "Gallery")</td>
-                </tr>
-            </table>
+            <div id="registerArea" class="col-md-4">
+               @Html.Partial("_LoginPartial")
+            </div>
         </div>
-        @*<nav class="navbar navbar-default">
-            <ul class="nav navbar-nav menu">
-                <li>@Html.ActionLink("Главная", "Index", "Home")</li>
-                <li>@Html.ActionLink("Тренировки", "Index", "Training")</li>
-                <li>@Html.ActionLink("Информация", "Index", "Info")</li>
-                <li>@Html.ActionLink("Галерея", "Index", "Gallery")</li>
-            </ul>
-        </nav>*@
-        <div class="heading"></div>
+    </header>
+
+    <div class="wrapper container content">
+        <div class="row menu">
+            <div class="col-md-3">@Html.ActionLink("Главная", "Index", "Home")</div>
+            <div class="col-md-3">@Html.ActionLink("Тренеровки", "Index", "Training")</div>
+            <div class="col-md-3">@Html.ActionLink("Информация", "Index", "Info")</div>
+            <div class="col-md-3">@Html.ActionLink("Галерея", "Index", "Gallery")</div>
+        </div>
+
         <div class="row">
             <section class="col-md-9">
                 @RenderBody()
             </section>
             <aside class="col-md-3">
-                <h3>Panel 1</h3>    
+                <h3>Panel 1</h3>
                 <div class="panel">
 
                 </div>
@@ -51,6 +44,7 @@
             </aside>
         </div>
     </div>
+
     <footer></footer>
 
     @Scripts.Render("~/bundles/jquery")
