--- a/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
+++ b/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
@@ -6,18 +6,38 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <script src="https://use.fontawesome.com/18dbca0590.js"></script>
 </head>
 <body>
     <header>
-        <div class="row">
+        <div class="navbar navbar-default navbar-static-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", null, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    @*<ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    </ul>*@
+                    @Html.Partial("_LoginPartial")
+                </div>
+            </div>
+        </div>
+        @*<div class="row">
             <div class="col-md-8">
                 @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", null, new { @class = "logo" })
             </div>
             <div id="registerArea" class="col-md-4">
                @Html.Partial("_LoginPartial")
             </div>
-        </div>
+        </div>*@
     </header>
     <div class="container">
         <ul class="nav nav-pills nav-justified">
@@ -52,53 +72,29 @@
         </ul>
 
         <section class="col-md-9">
-            <h3>@ViewBag.Title</h3>
+            <div>
+                <h2>@ViewBag.Title</h2>
+            </div>
             @RenderBody()
         </section>
         <aside class="col-md-3">
-            <h3>Panel 1</h3>
-            <div class="panel">
-
+            <div class="panel panel-default">
+                <div class="panel-heading">Panel 1</div>
+                <div class="panel-body"></div>
             </div>
-            <h3>Panel 2</h3>
-            <div class="panel">
-
+            <div class="panel panel-default">
+                <div class="panel-heading">Panel 2</div>
+                <div class="panel-body"></div>
             </div>
         </aside>
     </div>
-
-    @*<div class="wrapper container content">
-        <div class="row menu">
-            <div class="col-md-3">@Html.ActionLink("Новости", "Index", "News")</div>
-            <div class="col-md-3">@Html.ActionLink("Тренировки", "Index", "Training")</div>
-            <div class="col-md-3">@Html.ActionLink("Информация", "Index", "Info")</div>
-            <div class="col-md-3">@Html.ActionLink("Галерея", "Index", "Gallery")</div>
-        </div>
-
-        <div class="row">
-            <section class="col-md-9">
-                <h3>@ViewBag.Title</h3>
-                @RenderBody()
-            </section>
-            <aside class="col-md-3">
-                <h3>Panel 1</h3>
-                <div class="panel">
-
-                </div>
-                <h3>Panel 2</h3>
-                <div class="panel">
-
-                </div>
-            </aside>
-        </div>
-    </div>*@
 
     <footer></footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jquery.unobtrusive-ajax")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/activatingNavs")
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
