--- a/FCGagarin.WebUI/Views/News/DeleteAnnouncement.cshtml
+++ b/FCGagarin.WebUI/Views/News/DeleteAnnouncement.cshtml
@@ -7,11 +7,11 @@
 
 
 <div class="jumbotron">
-    <h2 class="well">@Html.DisplayFor(modelItem => Model.Title)</h2>
-    <p class="h6">
+    <h4 class="well">@Html.DisplayFor(modelItem => Model.Title)</h4>
+    <div class="h5">
         @Html.Raw(Model.Text)
-    </p>
-    <div class="pull-right text-muted h6">
+    </div>
+    <div class="text-muted h6">
         <div>
             @Html.DisplayNameFor(m => m.CreateDate):  @Html.DisplayFor(modelItem => Model.CreateDate)
         </div>
@@ -19,7 +19,7 @@
             @Html.DisplayNameFor(m => m.AnnouncemetCreator):  @Html.DisplayFor(modelItem => Model.AnnouncemetCreator)
         </div>
     </div>
-    <h3><span class="label label-danger">Вы уверены, что хотите удалить этот анонс?</span></h3>
+    <h5><span class="label label-danger">Удаляем этот анонс, вы уверены?</span></h5>
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
