--- a/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
+++ b/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="~/Content/Images/FCG_ico_16x16.ico" type="image/x-icon">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
@@ -9,90 +10,94 @@
     <script src="https://use.fontawesome.com/18dbca0590.js"></script>
 </head>
 <body>
-    <header>
-        <div class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", null, new { @class = "navbar-brand" })
+    <div id="page">
+        <header>
+            <div class="navbar navbar-default navbar-static-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", null, new { @class = "navbar-brand" })
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        @*<ul class="nav navbar-nav">
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        </ul>*@
+                        @Html.Partial("_LoginPartial")
+                    </div>
                 </div>
-                <div class="navbar-collapse collapse">
-                    @*<ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    </ul>*@
-                    @Html.Partial("_LoginPartial")
+            </div>
+            @*<div class="row">
+                <div class="col-md-8">
+                    @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", null, new { @class = "logo" })
                 </div>
-            </div>
-        </div>
-        @*<div class="row">
-            <div class="col-md-8">
-                @Html.ActionLink("ФК ГАГАРИН", "Index", "Home", null, new { @class = "logo" })
-            </div>
-            <div id="registerArea" class="col-md-4">
-               @Html.Partial("_LoginPartial")
-            </div>
-        </div>*@
-    </header>
-    <div class="container">
-        <ul class="nav nav-pills nav-justified">
-            <li role="presentation" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="test">Новости и анонсы</a>
-                <ul class="dropdown-menu">
-                    <li>@Html.ActionLink("Новости", "News", "News")</li>
-                    <li>@Html.ActionLink("Анонсы", "Announcements", "News")</li>
+                <div id="registerArea" class="col-md-4">
+                   @Html.Partial("_LoginPartial")
+                </div>
+            </div>*@
+        </header>
+        <section id="body" class="container">
+            <section id="menu">
+                <ul class="nav nav-pills nav-justified">
+                    <li role="presentation" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="test">Новости и анонсы</a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Новости", "News", "News")</li>
+                            <li>@Html.ActionLink("Анонсы", "Announcements", "News")</li>
+                        </ul>
+                    </li>
+                    <li role="presentation" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Тренировки</a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Сбор на тренировки", "Collection", "Training")</li>
+                            <li>@Html.ActionLink("Статистика посещений", "Statistics", "Training")</li>
+                        </ul>
+                    </li>
+                    <li role="presentation" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Информация</a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Новости", "Index", "News")</li>
+                            <li>@Html.ActionLink("Анонсы", "Index", "News")</li>
+                        </ul>
+                    </li>
+                    <li role="presentation" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Галерея</a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Новости", "Index", "News")</li>
+                            <li>@Html.ActionLink("Анонсы", "Index", "News")</li>
+                        </ul>
+                    </li>
                 </ul>
-            </li>
-            <li role="presentation" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Тренировки</a>
-                <ul class="dropdown-menu">
-                    <li>@Html.ActionLink("Сбор на тренировки", "Collection", "Training")</li>
-                    <li>@Html.ActionLink("Статистика посещений", "Statistics", "Training")</li>
-                </ul>
-            </li>
-            <li role="presentation" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Информация</a>
-                <ul class="dropdown-menu">
-                    <li>@Html.ActionLink("Новости", "Index", "News")</li>
-                    <li>@Html.ActionLink("Анонсы", "Index", "News")</li>
-                </ul>
-            </li>
-            <li role="presentation" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Галерея</a>
-                <ul class="dropdown-menu">
-                    <li>@Html.ActionLink("Новости", "Index", "News")</li>
-                    <li>@Html.ActionLink("Анонсы", "Index", "News")</li>
-                </ul>
-            </li>
-        </ul>
-
-        <section class="col-md-9">
-            <div>
+            </section>
+            <section id="main" class="col-md-9">
                 <h2>@ViewBag.Title</h2>
-            </div>
-            @RenderBody()
+                @RenderBody()
+            </section>
+            <section id="sidebar" class="col-md-3 hidden-sm hidden-xs">
+                <h3>Краткая сводка</h3>
+                <div class="panel panel-default">
+                    <div class="panel-heading">Panel 1</div>
+                    <div class="panel-body"></div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">Panel 2</div>
+                    <div class="panel-body"></div>
+                </div>
+            </section>
         </section>
-        <aside class="col-md-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">Panel 1</div>
-                <div class="panel-body"></div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">Panel 2</div>
-                <div class="panel-body"></div>
-            </div>
-        </aside>
+        <hr />
+        <footer class="container">
+            <p>ФК Гагарин. Поехали!</p>
+        </footer>
     </div>
-
-    <footer></footer>
-
+    
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jquery.unobtrusive-ajax")
+    @Scripts.Render("~/bundles/unobtrusive-ajax")
     @Scripts.Render("~/bundles/bootstrap")
 
     @RenderSection("scripts", required: false)
