пока без тегов. реализована работа с новостями и анонсами. расширена регистрация, но пока в ней баги.

--- a/FCGagarin.WebUI/Views/News/AddAnnouncement.cshtml
+++ b/FCGagarin.WebUI/Views/News/AddAnnouncement.cshtml
@@ -1,4 +1,4 @@
-﻿@model FCGagarin.WebUI.ViewModels.AnnouncementViewModel
+﻿@model FCGagarin.WebUI.ViewModels.AnnouncementFormModel
 
 @{
     ViewBag.Title = "Добавление анонса";
