--- a/FCGagarin.WebUI/Views/News/Announcements.cshtml
+++ b/FCGagarin.WebUI/Views/News/Announcements.cshtml
@@ -21,7 +21,7 @@
                 @Html.DisplayNameFor(m => m.CreateDate):  @Html.DisplayFor(modelItem => item.CreateDate)
             </div>
             <div>
-                @Html.DisplayNameFor(m => m.AnnouncemetCreator):  @Html.DisplayFor(modelItem => item.AnnouncemetCreator)
+                @Html.DisplayNameFor(m => m.Author):  @Html.DisplayFor(modelItem => item.Author)
             </div>
         </div>
         @if (User.Identity.IsAuthenticated) //TODO: заменить на проверку роли
